@@ -56,11 +56,11 @@ static void ula_write( libspectrum_word port, libspectrum_byte b );
 
 static module_info_t ula_module_info = {
 
-  NULL,
-  NULL,
-  NULL,
-  ula_from_snapshot,
-  ula_to_snapshot,
+  /* .reset = */ NULL,
+  /* .romcs = */ NULL,
+  /* .snapshot_enabled = */ NULL,
+  /* .snapshot_from = */ ula_from_snapshot,
+  /* .snapshot_to = */ ula_to_snapshot,
 
 };
 
@@ -70,10 +70,10 @@ static const periph_port_t ula_ports[] = {
 };
 
 static const periph_t ula_periph = {
-  NULL,
-  ula_ports,
-  0,
-  NULL
+  /* .option = */ NULL,
+  /* .ports = */ ula_ports,
+  /* .hard_reset = */ 0,
+  /* .activate = */ NULL,
 };
 
 static const periph_port_t ula_ports_full_decode[] = {
@@ -82,10 +82,10 @@ static const periph_port_t ula_ports_full_decode[] = {
 };
 
 static const periph_t ula_periph_full_decode = {
-  NULL,
-  ula_ports_full_decode,
-  0,
-  NULL
+  /* .option = */ NULL,
+  /* .ports = */ ula_ports_full_decode,
+  /* .hard_reset = */ 0,
+  /* .activate = */ NULL,
 };
 
 void
